option('with_brotli',
	type: 'feature',
	value: 'disabled',
	description: 'with brotli-support for mod_deflate [default: off]',
)
option('with_bzip',
	type: 'feature',
	value: 'disabled',
	description: 'with bzip2-support for mod_deflate [default: off]',
)
option('with_dbi',
	type: 'feature',
	value: 'disabled',
	description: 'with dbi-support for mod_auth mod_vhostdb_dbi [default: off]',
)
option('with_libdeflate',
	type: 'feature',
	value: 'disabled',
	description: 'with libdeflate-support for mod_deflate [default: off]',
)
option('with_fam',
	type: 'feature',
	value: 'disabled',
	description: 'fam/gamin for reducing number of stat() calls [default: off]',
)
option('with_gnutls',
	type: 'boolean',
	value: false,
	description: 'with GnuTLS-support [default: off]',
)
option('with_krb5',
	type: 'feature',
	value: 'disabled',
	description: 'with Kerberos5-support for mod_auth [default: off]',
)
option('with_ldap',
	type: 'feature',
	value: 'disabled',
	description: 'with LDAP-support for mod_auth mod_vhostdb_ldap [default: off]',
)
option('with_libev',
	type: 'feature',
	value: 'disabled',
	description: 'libev support for fdevent handlers [default: off]',
)
option('with_libunwind',
	type: 'feature',
	value: 'disabled',
	description: 'with libunwind to print backtraces in asserts [default: off]',
)
option('with_lua',
	type: 'boolean',
	value: false,
	description: 'with lua for mod_magnet [default: off]',
)
option('with_maxminddb',
	type: 'feature',
	value: 'disabled',
	description: 'with MaxMind GeoIP2-support mod_maxminddb [default: off]',
)
option('with_mbedtls',
	type: 'boolean',
	value: false,
	description: 'with mbedTLS-support [default: off]',
)
option('with_mysql',
	type: 'feature',
	value: 'disabled',
	description: 'with mysql-support for mod_vhostdb_mysql [default: off]',
)
option('with_nettle',
	type: 'boolean',
	value: false,
	description: 'with Nettle-support [default: off]',
)
option('with_nss',
	type: 'boolean',
	value: false,
	description: 'with NSS-crypto-support [default: off]',
)
option('with_openssl',
	type: 'boolean',
	value: false,
	description: 'with openssl-support [default: off]',
)
option('with_pam',
	type: 'feature',
	value: 'disabled',
	description: 'with PAM-support for mod_auth [default: off]',
)
option('with_pcre2',
	type: 'boolean',
	value: true,
	description: 'with regex support [default: on]',
)
option('with_pcre',
	type: 'combo',
	choices: ['auto','pcre2','pcre','disabled'],
	value: 'auto',
	description: 'with regex support [default: auto]',
)
option('with_pgsql',
	type: 'feature',
	value: 'disabled',
	description: 'with postgres-support for mod_vhostdb_pgsql [default: off]',
)
option('with_sasl',
	type: 'feature',
	value: 'disabled',
	description: 'with SASL support for mod_authn_sasl [default: off]',
)
#option('with_valgrind',
#	type: 'boolean',
#	value: false,
#	description: 'with internal support for valgrind [default: off]',
#)
option('with_webdav_locks',
	type: 'feature',
	value: 'disabled',
	description: 'locks in webdav (obsolete flag; ignored) [default: off]',
)
option('with_webdav_props',
	type: 'feature',
	value: 'disabled',
	description: 'with property-support for mod_webdav [default: off]',
)
option('with_wolfssl',
	type: 'boolean',
	value: false,
	description: 'with wolfSSL-support [default: off]',
)
option('with_xattr',
	type: 'boolean',
	value: false,
	description: 'with xattr-support for the stat-cache [default: off]',
)
option('with_xxhash',
	type: 'feature',
	value: 'disabled',
	description: 'with system-provided libxxhash [default: off]',
)
option('with_zlib',
	type: 'feature',
	value: 'enabled',
	description: 'with deflate-support for mod_deflate [default: on]',
)
option('with_zstd',
	type: 'feature',
	value: 'disabled',
	description: 'with zstd-support for mod_deflate [default: off]',
)

option('build_extra_warnings',
	type: 'boolean',
	value: false,
	description: 'extra warnings (only enabled with gcc/clang)',
)
option('warn_cflags',
	type: 'string',
	value: '-g -g2 -Wall -Wmissing-declarations -Wcast-align -Wsign-compare -Wnested-externs -Wpointer-arith -D_FORTIFY_SOURCE=2 -fstack-protector-strong --param=ssp-buffer-size=4 -Wformat -Werror=format-security',
	description: 'CFLAGS to use when build_extra_warnings is active',
)

option('build_static',
	type: 'boolean',
	value: false,
	description: 'build a static lighttpd with all modules added',
)

option('moduledir',
	type: 'string',
	value: 'lib/lighttpd',
	description: 'Location to install modules to (relative to prefix)',
)

option('lua_version',
	type: 'string',
	description: 'Look for a specific lua version',
)
